<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    android:theme="@style/Theme.Personalized">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textTitleEditText"
            android:textColor="@color/black"
            android:textColorHint="@color/primary"
            android:textSize="@dimen/_15ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textDescriptionEditText"
            android:textColor="@color/black"
            android:textColorHint="@color/primary"
            android:textSize="@dimen/_15ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary"
        android:text="@string/save"
        android:textColor="@color/white" />


</LinearLayout>