<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/yourLinearLayoutId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/border_card"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/round_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_2sdp"
            android:button="@drawable/round_checkbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textviewTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/picton_blue"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textviewDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:gravity="top"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewEmoji"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/green_blue"
            android:contentDescription="@string/contentEditButton"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/pumpkin"
            android:contentDescription="@string/contentDeleteButton"
            android:src="@drawable/ic_delete" />
    </LinearLayout>
</LinearLayout>
